--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.data.mongodb.database=
-spring.data.mongodb.uri=mongodb+srv://filipzitny:eyjj4aQuWEbh7VvQ@cluster0.jt2iphn.mongodb.net
+spring.data.mongodb.database=${env.MONGO_DATABASE}
+spring.data.mongodb.uri=mongodb+srv://${env.MONGO_USER}:${env.MONGO_PASSWORD}@${env.MONGO_CLUSTER}
